[common] fix(global styles): link on atomic block stretches it to 100%

--- a/packages/common/statics/styles/global.scss
+++ b/packages/common/statics/styles/global.scss
@@ -175,5 +175,4 @@
 
 .anchor {
   display: block;
-  width: 100%;
 }
